--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,8 @@ body {
   justify-content: center;
   align-items: center;
   background-size: 100% auto;
+  max-height: 1740px;
+  min-width: 980px;
 }
 
 .content h1 {
@@ -424,6 +426,12 @@ body {
   overflow: auto;
 }
 
+.content .raccoonbookBox #raccoonp {
+  width: 70%;
+  color: #353535;
+  font-size: 25px;
+}
+
 .content .raccoonbookBox .hide {
   display: none;
 }
@@ -595,10 +603,13 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: auto;
 }
 
 .calendarModal .records li {
   width: 100%;
+  min-height: 93px;
+  min-width: 430px;
 }
 
 .calendarModal .records .deleteBtn {
@@ -629,6 +640,8 @@ body {
   width: 98%;
   padding: 5%;
   background-color: rgba(255, 187, 114, 0.9);
+  overflow: auto;
+  max-height: 1400px;
 }
 
 .calendar .calendarBox .monthBar {
@@ -669,6 +682,7 @@ body {
   border-radius: 20px;
   overflow: auto;
   height: 88%;
+  max-height: 1114px;
 }
 
 .calendar .calendarBox .dateBox .memoModal {
@@ -684,6 +698,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: auto;
 }
 
 .calendar .calendarBox .dateBox .memoModal #closeMemoModal {
@@ -797,6 +812,7 @@ body {
   margin: 0;
   padding: 0;
   border: solid 2px #525863;
+  min-height: 166px;
 }
 
 .calendar .calendarBox .dateBox .alldays .date #emojiOfTheDay {
@@ -813,6 +829,7 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  min-height: 200px;
 }
 
 .bar button {
@@ -865,6 +882,7 @@ body {
 }
 */
 .login {
+  min-height: 1500px;
   display: flex;
   position: fixed;
   height: 120%;
@@ -904,31 +922,35 @@ body {
 }
 
 .login .userName input, .login .password input {
-  margin: 5% 10% 30% 10%;
+  margin: 5% 10% 15% 10%;
   width: 100%;
   height: 60px;
   font-size: 40px;
 }
 
-.login #tutorialDiv {
+.login #tutorialDiv, .login #createAccDiv {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-content: center;
 }
 
-.login #tutorialDiv #firstTimeUser {
+.login #tutorialDiv #firstTimeUser, .login #createAccDiv #firstTimeUser {
   margin: 0px 20px 0px 0px;
   margin: 0;
   width: 50px;
   height: 50px;
 }
 
-.login #tutorialDiv label {
+.login #tutorialDiv label, .login #createAccDiv label {
   font-size: 40px;
 }
 
 .login #loginButton {
+  font-weight: bold;
+  border: 10px #525863 solid;
+  border-radius: 20px;
+  padding: 10px;
   margin-top: 30px;
   font-size: 40px;
 }
@@ -960,6 +982,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: auto;
 }
 
 .settingPage .sounds h2 {
