--- a/views/book.handlebars
+++ b/views/book.handlebars
@@ -21,7 +21,7 @@
 	<div class="content otherPages">
 		<div class="raccoonbookBox">
 			<h1> Raccoon Book </h1>
-			<p>These mindful raccoons drop by randomly to say hi and see how you're doing!</p>
+			<p id="raccoonp">These mindful raccoons drop by randomly to say hi and see how you're doing!</p>
 			<div class="raccoons">
 
 				{{#each raccoons}}
