--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,7 +2,46 @@
 
 <head>
 
-    <!-- Google Analytics Content Experiment code -->
+        <!-- Google Analytics Content Experiment code -->
+        <script>function utmx_section(){}function utmx(){}(function(){var
+        k='115467101-1',d=document,l=d.location,c=d.cookie;
+        if(l.search.indexOf('utm_expid='+k)>0)return;
+        function f(n){if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.
+        indexOf(';',i);return escape(c.substring(i+n.length+1,j<0?c.
+        length:j))}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;d.write(
+        '<sc'+'ript src="'+'http'+(l.protocol=='https:'?'s://ssl':
+        '://www')+'.google-analytics.com/ga_exp.js?'+'utmxkey='+k+
+        '&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='+new Date().
+        valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
+        '" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
+        </script><script>utmx('url','A/B');</script>
+        <!-- End of Google Analytics Content Experiment code -->
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115467101-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-115467101-1');
+        </script> -->
+
+        <!-- Google Analytics -->
+        <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-115467101-1', 'auto'); //Swap out UA-XXXXX-Y with your GA tracking id
+        ga('send', 'pageview'); 
+        gtag('create', 'UA-115467101-1', 'auto'); //Swap out UA-XXXXX-Y with your GA tracking id
+        gtag('send', 'pageview');
+        </script> 
+        <!-- End Google Analytics -->
+
+    <!-- Google Analytics Content Experiment code 
     <script>function utmx_section() { } function utmx() { } (function () {
             var
             k = '170952721-0', d = document, l = d.location, c = d.cookie;
@@ -24,7 +63,7 @@ var j = c.
 })();
     </script>
     <script>utmx('url', 'A/B');</script>
-    <!-- End of Google Analytics Content Experiment code -->
+     End of Google Analytics Content Experiment code -->
 
     <title>Raccoonal Home</title>
 
