--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -25,7 +25,7 @@
           gtag('js', new Date());
 
           gtag('config', 'UA-115467101-1');
-        </script> -->
+        </script> 
 
         <!-- Google Analytics -->
         <script>
