--- a/views/setting.handlebars
+++ b/views/setting.handlebars
@@ -1,27 +1,17 @@
 <html>
 
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115467101-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-	<!-- Global site tag (gtag.js) - Google Analytics 
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115193214-1"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
+  gtag('config', 'UA-115467101-1');
+</script>
 
-	  gtag('config', 'UA-115467101-1');
-	</script> -->
-
-    <!-- Google Analytics -->
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-115467101-1', 'auto'); //Swap out UA-XXXXX-Y with your GA tracking id
-    ga('send', 'pageview'); </script> 
-    <!-- End Google Analytics -->
+	
     
 	
 	<title>Raccoonal Setting</title>
