--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -28,6 +28,19 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
   gtag('config', 'UA-115467101-1');
 </script>
 
+        <!-- Google Analytics -->
+        <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-115467101-1', 'auto'); //Swap out UA-XXXXX-Y with your GA tracking id
+        ga('send', 'pageview'); 
+        gtag('create', 'UA-115467101-1', 'auto'); //Swap out UA-XXXXX-Y with your GA tracking id
+        gtag('send', 'pageview');
+        </script> 
+        <!-- End Google Analytics -->
 
 
     <title>Raccoonal Home</title>
