--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,45 +2,56 @@
 
 <head>
 
-     <!-- Google Analytics Content Experiment code -->
-<script>function utmx_section(){}function utmx(){}(function(){var
-k='171243852-2',d=document,l=d.location,c=d.cookie;
-if(l.search.indexOf('utm_expid='+k)>0)return;
-function f(n){if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.
-indexOf(';',i);return escape(c.substring(i+n.length+1,j<0?c.
-length:j))}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;d.write(
-'<sc'+'ript src="'+'http'+(l.protocol=='https:'?'s://ssl':
-'://www')+'.google-analytics.com/ga_exp.js?'+'utmxkey='+k+
-'&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='+new Date().
-valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
-'" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
-</script><script>utmx('url','A/B');</script>
-<!-- End of Google Analytics Content Experiment code -->
+    <!-- Google Analytics Content Experiment code -->
+    <script>function utmx_section() { } function utmx() { } (function () {
+            var
+            k = '171243852-2', d = document, l = d.location, c = d.cookie;
+            if (l.search.indexOf('utm_expid=' + k) > 0) return;
+            function f(n) {
+                if (c) {
+                    var i = c.indexOf(n + '='); if (i > -1) {                        
+var j = c.
+                            indexOf(';', i); return escape(c.substring(i + n.length + 1, j < 0 ? c.
+                                length : j))
+                    }                
+}            
+} var x = f('__utmx'), xx = f('__utmxx'), h = l.hash; d.write(
+                '<sc' + 'ript src="' + 'http' + (l.protocol == 'https:' ? 's://ssl' :
+                    '://www') + '.google-analytics.com/ga_exp.js?' + 'utmxkey=' + k +
+                '&utmx=' + (x ? x : '') + '&utmxx=' + (xx ? xx : '') + '&utmxtime=' + new Date().
+                    valueOf() + (h ? '&utmxhash=' + escape(h.substr(1)) : '') +
+                '" type="text/javascript" charset="utf-8"><\/sc' + 'ript>')        
+})();
+    </script>
+    <script>utmx('url', 'A/B');</script>
+    <!-- End of Google Analytics Content Experiment code -->
 
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115467101-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115467101-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'UA-115467101-1');
-</script>
+        gtag('config', 'UA-115467101-1');
+    </script>
 
-        <!-- Google Analytics -->
-        <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    <!-- Google Analytics -->
+    <script>
+        (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)        
+}, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-115467101-1', 'auto'); //Swap out UA-XXXXX-Y with your GA tracking id
-        ga('send', 'pageview'); 
+        ga('send', 'pageview');
         gtag('create', 'UA-115467101-1', 'auto'); //Swap out UA-XXXXX-Y with your GA tracking id
         gtag('send', 'pageview');
-        </script> 
-        <!-- End Google Analytics -->
+    </script>
+    <!-- End Google Analytics -->
 
 
     <title>Raccoonal Home</title>
@@ -110,7 +121,6 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
             </div>
         </div>
 
-        {{#if viewAlt}}
         <div class="scanResultModalB" id="scanResultDiv">
             <p id="donetext">Done!</p>
             <p>
@@ -154,46 +164,6 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
                 <button type="button" id="resultDoneButtonB">Close</button>
             </div>
         </div>
-        {{else}}
-        <div class="scanResultModal" id="scanResultDiv">
-            <p>Done!
-                <br>Your result is:</p>
-            <!--<div id="resultChartContainer"></div>-->
-            <ul id="emotionRateList">
-                <li id="resultJoy">
-                    <img src="../images/Emotions/joy.png" class="emoji">
-                </li>
-                <li id="resultSad">
-                    <img src="../images/Emotions/sad.png" class="emoji">
-                </li>
-                <li id="resultContempt">
-                    <img src="../images/Emotions/contempt.png" class="emoji">
-                </li>
-                <li id="resultFear">
-                    <img src="../images/Emotions/fear.png" class="emoji">
-                </li>
-                <li id="resultAngry">
-                    <img src="../images/Emotions/angry.png" class="emoji">
-                </li>
-                <li id="resultDisgust">
-                    <img src="../images/Emotions/disgust.png" class="emoji">
-                </li>
-                <li id="resultSurprise">
-                    <img src="../images/Emotions/surprise.png" class="emoji">
-                </li>
-            </ul>
-            <div id="memoGroup">
-                <input type="text" placeholder="What are you thinking about..." id="resultMemo">
-                <button type="submit" id="resultMemoSubmit">
-                    <img src="../images/checkmark.png" width="50">
-                </button>
-            </div>
-            <div class="buttons">
-                <button type="button" id="resultCalendarButton">Calendar</button>
-                <button type="button" id="resultDoneButton">Close</button>
-            </div>
-        </div>
-        {{/if}}
     </div>
 
     <div class="bar">
