--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -240,6 +240,8 @@ var j = c.
                 ind = 0;
                 $(".quizModal").hide();
                 isQuizFinished = true;
+                    $("#scanResultDiv").fadeIn(100).css("display", "flex");
+
 
                 if (isScanFinished) {
                     $("#scanResultDiv").fadeIn(100).css("display", "flex");
